--- a/semester_projekt/templates/products_detail.html
+++ b/semester_projekt/templates/products_detail.html
@@ -25,8 +25,8 @@
          <div class='col-sm-4 '>
                 <h5> DESCRIPTION</h5>
                 <div class="panel-footer">{{ product.name }}</div>
-                 <div class="panel-body">{{ product.description }}</div>
-                 <div class="panel-footer">{{ product.name }}</div>
+{#                 <div class="panel-body">{{ product.description }}</div>#}
+{#                 <div class="panel-footer">{{ product.name }}</div>#}
                  {{ product.description|linebreaks }}
             {% if recommended_products %}
                 <div class="recommendations">
